Bug 1719861 [wpt PR 29621] - [css-flex] Migrate more abspos tests from reference to check-layout, a=testonly
Automatic update from web-platform-tests
[css-flex] Migrate more abspos tests from reference to check-layout

Before this patch, the entire test file is marked Fail even though each
file has ~15-20 tests in it, some of which Blink passes. If we were to
regress any of the tests we pass, we'd never know.

Firefox passes all these tests so I wrote a script that harvests
Firefox's offsetTop/Left values and stuffs them into data-offset-x/y.

Most recent similar patch is at
https://chromium-review.googlesource.com/c/chromium/src/+/2965267

Change-Id: I0bfcb3a5c08c3abac6238d79917065facc39aa63
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3016361
Reviewed-by: Morten Stenshorne <mstenshochromium.org>
Commit-Queue: David Grogan <dgroganchromium.org>
Cr-Commit-Position: refs/heads/master{#900574}

--

wpt-commits: 9d6f1c1aa7e1daa62c350b3fec18d594792f408a
wpt-pr: 29621

UltraBlame original commit: f3d95dc6fe87224a4476398768f9603c20649762

--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-001.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-001.html
@@ -98,6 +98,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -124,33 +148,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-content
--
-001
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -169,6 +166,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -357,11 +358,79 @@ center
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -436,6 +505,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -479,6 +566,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -508,6 +613,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -553,6 +676,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -583,6 +724,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -613,6 +772,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -641,6 +818,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -686,6 +881,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -714,6 +927,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -742,6 +973,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -789,6 +1038,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -819,6 +1086,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -908,6 +1193,25 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -951,6 +1255,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -980,6 +1302,25 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1025,6 +1366,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1055,6 +1414,25 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1085,6 +1463,25 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1113,6 +1510,25 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1158,6 +1574,25 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1186,6 +1621,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1214,6 +1667,25 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1261,6 +1733,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1291,6 +1781,25 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
