--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-002.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-002.html
@@ -101,6 +101,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -127,33 +151,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-content
--
-002
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -172,6 +169,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -362,11 +363,79 @@ center
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -441,6 +510,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -484,6 +571,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -513,6 +618,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -558,6 +681,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -588,6 +729,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -618,6 +777,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -646,6 +823,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -691,6 +886,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -719,6 +932,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -747,6 +978,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -794,6 +1043,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -824,6 +1091,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -913,6 +1198,25 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -956,6 +1260,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -985,6 +1307,25 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1030,6 +1371,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1060,6 +1419,25 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1090,6 +1468,25 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1118,6 +1515,25 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1163,6 +1579,25 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1191,6 +1626,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1219,6 +1672,25 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1266,6 +1738,25 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1296,6 +1787,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
