--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-rtl-001.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-rtl-001.html
@@ -99,6 +99,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -125,35 +149,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-content
--
-rtl
--
-001
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -172,6 +167,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -364,11 +363,79 @@ center
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -443,6 +510,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -486,6 +571,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -515,6 +618,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -560,6 +681,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -590,6 +729,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -620,6 +777,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -648,6 +823,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -693,6 +886,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -721,6 +932,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -749,6 +978,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -796,6 +1043,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -826,6 +1091,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -915,6 +1198,26 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -958,6 +1261,25 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -987,6 +1309,26 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1032,6 +1374,25 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1062,6 +1423,26 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1092,6 +1473,26 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1120,6 +1521,26 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1165,6 +1586,26 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1193,6 +1634,25 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1221,6 +1681,26 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1268,6 +1748,25 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1298,6 +1797,26 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
