--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-vertWM-001.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-vertWM-001.html
@@ -101,6 +101,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -127,35 +151,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-content
--
-vertWM
--
-001
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -174,6 +169,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -370,11 +369,79 @@ center
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -449,6 +516,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -492,6 +577,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -521,6 +624,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -566,6 +687,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -596,6 +735,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -626,6 +783,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -654,6 +829,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -699,6 +892,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -727,6 +938,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -755,6 +984,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -802,6 +1049,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -832,6 +1097,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -921,6 +1204,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -964,6 +1265,25 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -993,6 +1313,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1038,6 +1376,25 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1068,6 +1425,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1098,6 +1473,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1126,6 +1519,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1171,6 +1582,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1199,6 +1628,25 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1227,6 +1675,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1274,6 +1740,25 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1304,6 +1789,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
