--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-002.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-002.html
@@ -104,6 +104,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -130,35 +154,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-self
--
-vertWM
--
-002
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -177,6 +172,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -307,11 +306,79 @@ width
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -390,6 +457,24 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -418,6 +503,24 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -445,6 +548,24 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -489,6 +610,24 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -517,6 +656,24 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -563,6 +720,24 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -590,6 +765,24 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -619,6 +812,24 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -649,6 +860,24 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -678,6 +907,24 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -726,6 +973,24 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -756,6 +1021,24 @@ flex
 -
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -784,6 +1067,24 @@ self
 :
 left
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -811,6 +1112,24 @@ align
 self
 :
 right
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -905,6 +1224,25 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -933,6 +1271,25 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -960,6 +1317,25 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1004,6 +1380,25 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1032,6 +1427,24 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1078,6 +1491,24 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1105,6 +1536,25 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1134,6 +1584,24 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1164,6 +1632,24 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1193,6 +1679,25 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1241,6 +1746,25 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1271,6 +1795,24 @@ flex
 -
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1299,6 +1841,25 @@ self
 :
 left
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1326,6 +1887,25 @@ align
 self
 :
 right
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
