--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-003.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-003.html
@@ -101,6 +101,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -127,35 +151,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-self
--
-vertWM
--
-003
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -174,6 +169,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -296,11 +295,79 @@ width
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -379,6 +446,24 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -407,6 +492,24 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -434,6 +537,24 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -478,6 +599,24 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -506,6 +645,24 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
 "
 >
 <
@@ -552,6 +709,24 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -579,6 +754,24 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -608,6 +801,24 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -638,6 +849,24 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -667,6 +896,24 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
 "
 >
 <
@@ -715,6 +962,24 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -744,6 +1009,24 @@ self
 flex
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
 "
 >
 <
@@ -838,6 +1121,25 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -866,6 +1168,25 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -893,6 +1214,25 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -937,6 +1277,25 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -965,6 +1324,26 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
 "
 >
 <
@@ -1011,6 +1390,26 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1038,6 +1437,25 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1067,6 +1485,26 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1097,6 +1535,25 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1126,6 +1583,26 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
 "
 >
 <
@@ -1174,6 +1651,25 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1203,6 +1699,26 @@ self
 flex
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
 "
 >
 <
