--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-004.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-self-vertWM-004.html
@@ -106,6 +106,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -132,35 +156,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-self
--
-vertWM
--
-004
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -179,6 +174,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -313,11 +312,79 @@ width
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -396,6 +463,24 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -424,6 +509,24 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -451,6 +554,24 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -495,6 +616,24 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -523,6 +662,24 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
 "
 >
 <
@@ -569,6 +726,24 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+3
+"
 >
 <
 /
@@ -596,6 +771,24 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -625,6 +818,24 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -655,6 +866,24 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
+"
 >
 <
 /
@@ -684,6 +913,24 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -732,6 +979,24 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -761,6 +1026,24 @@ self
 flex
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+5
 "
 >
 <
@@ -855,6 +1138,25 @@ self
 :
 auto
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -883,6 +1185,25 @@ self
 :
 normal
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -910,6 +1231,25 @@ align
 self
 :
 stretch
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -954,6 +1294,25 @@ self
 :
 baseline
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -982,6 +1341,26 @@ self
 :
 last
 baseline
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
 "
 >
 <
@@ -1028,6 +1407,26 @@ self
 :
 center
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+1
+"
 >
 <
 /
@@ -1055,6 +1454,25 @@ align
 self
 :
 start
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1084,6 +1502,26 @@ self
 :
 end
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1114,6 +1552,26 @@ self
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
+"
 >
 <
 /
@@ -1143,6 +1601,25 @@ self
 self
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
 "
 >
 <
@@ -1191,6 +1668,25 @@ flex
 -
 start
 "
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1220,6 +1716,26 @@ self
 flex
 -
 end
+"
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+-
+3
 "
 >
 <
