--- a/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-005.html
+++ b/testing/web-platform/tests/css/css-flexbox/abspos/flex-abspos-staticpos-align-content-005.html
@@ -98,6 +98,30 @@ link
 rel
 =
 "
+author
+"
+title
+=
+"
+David
+Grogan
+"
+href
+=
+"
+mailto
+:
+dgrogan
+chromium
+.
+org
+"
+>
+<
+link
+rel
+=
+"
 help
 "
 href
@@ -124,33 +148,6 @@ items
 "
 >
 <
-link
-rel
-=
-"
-match
-"
-href
-=
-"
-flex
--
-abspos
--
-staticpos
--
-align
--
-content
--
-005
--
-ref
-.
-html
-"
->
-<
 meta
 charset
 =
@@ -169,6 +166,10 @@ container
 display
 :
 flex
+;
+position
+:
+relative
 ;
 flex
 -
@@ -357,11 +358,79 @@ center
 style
 >
 <
+script
+src
+=
+"
+/
+resources
+/
+testharness
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+testharnessreport
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+src
+=
+"
+/
+resources
+/
+check
+-
+layout
+-
+th
+.
+js
+"
+>
+<
+/
+script
+>
+<
 /
 head
 >
 <
 body
+onload
+=
+"
+checkLayout
+(
+'
+.
+container
+>
+div
+'
+)
+"
 >
 <
 div
@@ -436,6 +505,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -479,6 +566,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -508,6 +613,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -553,6 +676,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -583,6 +724,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -613,6 +772,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -641,6 +818,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -686,6 +881,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+6
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -714,6 +927,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -742,6 +973,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -789,6 +1038,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -819,6 +1086,24 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+10
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -908,6 +1193,24 @@ normal
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -951,6 +1254,24 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -980,6 +1301,25 @@ baseline
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1025,6 +1365,24 @@ between
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1055,6 +1413,24 @@ around
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1085,6 +1461,24 @@ evenly
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1113,6 +1507,24 @@ stretch
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1158,6 +1570,24 @@ center
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+0
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1186,6 +1616,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1214,6 +1662,25 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1261,6 +1728,24 @@ start
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
@@ -1291,6 +1776,25 @@ end
 >
 <
 div
+data
+-
+offset
+-
+x
+=
+"
+-
+2
+"
+data
+-
+offset
+-
+y
+=
+"
+1
+"
 >
 <
 /
